Replaced em with rem units for input span elems, preventing distortion bug when an odd font-size is used

--- a/client/src/components/views/design/customizer-ui/CustomizerUi.css
+++ b/client/src/components/views/design/customizer-ui/CustomizerUi.css
@@ -100,9 +100,9 @@
     /* Prevent squishing on smaller widths */
     flex-shrink: 0;
 
-    width: 1.25em;
-    height: 1.25em;
-    padding: .125em;
+    width: 1.25rem;
+    height: 1.25rem;
+    padding: .125rem;
     border: 2px solid var(--light-indigo);
     border-radius: 50%;
     margin-right: .5em;
@@ -140,9 +140,9 @@
     flex-shrink: 0;
 
     margin-right: 1rem;
-    width: 1.25em;
-    height: 1.25em;
-    padding: .125em;
+    width: 1.25rem;
+    height: 1.25rem;
+    padding: .125rem;
     border: 2px solid #ccc;
     border-radius: 4px;
 }
